# clad-studio

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.runtime  README.md  SECURITY.md  docker-compose.ci.yml  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml  docker.yml  signer-core.yml  zombienet.yml
crates/server/: Cargo.toml  README.md
crates/server/src/: lib.rs
crates/signer-core/: BUILD.md  Cargo.toml  README.md  build-android.sh  build-ios.sh  build.rs  uniffi.toml
crates/signer-core/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
crates/signer-core/android/sample/: build.gradle.kts
crates/signer-core/android/sample/src/androidTest/kotlin/tech/wideas/clad/signer/sample/: PingInstrumentedTest.kt
crates/signer-core/android/sample/src/test/kotlin/tech/wideas/clad/signer/sample/: PingTest.kt
crates/signer-core/ios/: Package.swift
crates/signer-core/ios/Tests/SignerCoreTests/: PingTests.swift
crates/signer-core/src/: lib.rs  signer_core.udl
crates/signer-core/src/crypto/: blake2.rs  ed25519.rs  mod.rs  sr25519.rs  ss58.rs
crates/signer-core/src/extrinsic/: call.rs  era.rs  metadata.rs  mod.rs  payload.rs  signed.rs  signed_extensions.rs
crates/signer-core/src/extrinsic/call/: scale.rs
crates/signer-core/src/uos/: account_introduction.rs  constants.rs  error.rs  mod.rs  multipart.rs  payload.rs  signature.rs
crates/signer-core/tests/: crypto_known_answer.rs  crypto_kotlin_oracle.rs  extrinsic_call_data.rs  extrinsic_metadata.rs  extrinsic_metadata_drift.rs  extrinsic_signed.rs  extrinsic_signing_payload.rs  ping_test.rs  uos_account_introduction_corpus.rs  uos_multipart_corpus.rs  uos_payload_corpus.rs  uos_property_tests.proptest-regressions  uos_property_tests.rs  uos_signature_corpus.rs
crates/signer-core/tests/common/: mod.rs
crates/signer-core/tests/corpora/: README.md
crates/signer-core/tests/corpora/account_introduction/: minimal.json  with_genesis.json  with_name_ascii.json  with_name_reserved_chars.json  with_name_unicode.json
crates/signer-core/tests/corpora/crypto/: blake2b_256.json  blake2b_256_oracle.json  sr25519_verify.json  ss58_decode.json  ss58_encode.json
crates/signer-core/tests/corpora/extrinsic/: call_data.json
crates/signer-core/tests/corpora/metadata/: metadata_v14.json  metadata_v14.scale
crates/signer-core/tests/corpora/multipart/: large_5kb.json  single_frame.json  three_frame_balanced.json  three_frame_uneven_tail.json
crates/signer-core/tests/corpora/payload/: sign_hash_1024bytes.json  sign_hash_1byte.json  sign_hash_5000bytes.json  sign_hash_empty.json  sign_immortal_1024bytes.json  sign_immortal_1byte.json  sign_immortal_5000bytes.json  sign_immortal_empty.json  sign_message_1024bytes.json  sign_message_1byte.json  sign_message_5000bytes.json  sign_message_empty.json  sign_tx_1024bytes.json  sign_tx_1byte.json  sign_tx_5000bytes.json  sign_tx_empty.json
crates/signer-core/tests/corpora/signature/: ecdsa_nonzero.json  ecdsa_zeros.json  ed25519_nonzero.json  ed25519_zeros.json  sr25519_nonzero.json  sr25519_zeros.json
docs/: ci-cd.md  docker-setup.md  zombienet-setup.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/benchmarking/: frame-umbrella-weight-template.hbs
pallets/clad-token/: Cargo.toml
pallets/clad-token/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  tests.rs
scripts/: regen-metadata-corpus.sh  wait-for-rpc.sh
zombienet/: basic.zndsl  network.toml
