[workspace]
members = [
    "pallets/clad-token",
    "runtime",
    "node",
]
resolver = "2"

[workspace.package]
authors = ["Clad Sovereign <helloclad@wideas.tech>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://clad.so"
repository = "https://github.com/clad-sovereign/clad-studio"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
opt-level = 3

# NOTE: linked_hash_set is pinned to v0.1.5 in Cargo.lock
# v0.1.6 requires edition2024 (nightly-only), incompatible with stable Rust 1.81
# To maintain: DO NOT run `cargo update -p linked_hash_set` without --precise 0.1.5
