[package]
name = "signer-core"
version = "0.1.0"
edition = "2021"
description = "Shared protocol and crypto primitives for the Clad Sovereign signer."
license = "Apache-2.0"
authors = ["Clad Sovereign <helloclad@wideas.tech>"]
publish = false

# Three crate types:
# - cdylib: Android (`.so`) and iOS simulator/device (`.dylib`/framework linking) consumption
# - staticlib: iOS xcframework (lipo-merged static libraries per architecture)
# - lib (rlib): workspace consumption and `cargo test`
[lib]
name = "signer_core"
crate-type = ["cdylib", "staticlib", "lib"]

[[bin]]
# UniFFI ships its generator as a library; projects conventionally expose it
# as a small binary in their own crate. This lets CI run:
#   cargo run -p signer-core --bin uniffi-bindgen --features uniffi-cli -- <args>
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["uniffi-cli"]

[features]
default = []
# Enables the `uniffi-bindgen` binary above. Kept off by default so `cargo build`
# in the workspace doesn't pull the CLI dependency unnecessarily.
uniffi-cli = ["uniffi/cli"]
# Gates integration tests that require a live clad-node --dev instance.
# Enable with: cargo test -p signer-core --features roundtrip-node --locked
roundtrip-node = []
# Enable std-dependent feature implementations.
std = [
    "schnorrkel/std",
    "ed25519-zebra/std",
    "parity-scale-codec/std",
    "blake2/std",
    "bs58/std",
    "hex/std",
]

[dependencies]
uniffi = { version = "0.29.5" }
thiserror = "1"
schnorrkel = { version = "0.11", default-features = false, features = ["alloc"] }
ed25519-zebra = { version = "4", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
blake2 = { version = "0.10", default-features = false }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
zeroize = { version = "1", default-features = false, features = ["derive"] }

[build-dependencies]
uniffi = { version = "0.29.5", features = ["build"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
hex = "0.4"
# Blocking JSON-RPC client for the roundtrip-node integration tests.
# Only pulled in for test builds; not part of the production binary.
reqwest = { version = "0.12", features = ["blocking", "json"] }
# schnorrkel's internal nonce-derivation machinery calls into getrandom even
# for the deterministic signing path.  The `std` feature makes getrandom
# available during tests.  Production builds stay no_std (see [dependencies]).
schnorrkel = { version = "0.11", features = ["std"] }
